# portfolio-rust-webassembly

./: Cargo.toml  history.txt  requirements.txt
rust/: Cargo.toml
rust/src/: command.rs  lib.rs  main.rs  utils.rs
rust/src/builtin/: bools.rs  clear.rs  echo.rs
rust/src/executor/: history.rs  mod.rs
rust/src/parser/: ast.rs
rust/src/parser/ast/: conversions.rs
src/: command.rs  error.rs  exception.rs  main.rs  shell_state.rs  terminal.rs  utils.rs
src/builtin/: bools.rs  cat.rs  clear.rs  echo.rs  mod.rs
src/executor/: history.rs  mod.rs  parser.rs  pipelines.rs
src/parser/: ast.rs  mod.rs  token.rs  validator.rs
src/parser/ast/: conversions.rs
web/: package.json
web/src/: app.tsx
