[package]
name = "learning-rust"
version = "0.1.0"
authors = ["Dimitri van der Vliet <redacted :-)>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
wasm-bindgen = "0.2"
